# nox-lang

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yaml
examples/: basic.nox
src/: diagnostic.rs  lib.rs  main.rs
src/lexer/: mod.rs  symbol_registry.rs  token.rs
src/parser/: ast.rs  expression.rs  mod.rs  statements.rs
src/tokenizer/: lexer.rs  mod.rs  symbol_registry.rs  token.rs
tests/: lexer_snapshots.rs  parser_snapshots.rs
tests/common/: mod.rs
tests/snapshots/: lexer_snapshots__entire_file_tokenization.snap  lexer_snapshots__real_world_operator_usage.snap  parser_snapshots__call_with_args.snap  parser_snapshots__float_literal.snap  parser_snapshots__identifier.snap  parser_snapshots__int_literal.snap  parser_snapshots__mixed_expression.snap  parser_snapshots__nested_calls.snap  parser_snapshots__precedence_math.snap  parser_snapshots__simple_call.snap
