[package]
name = "nox-lang"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nox"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
derive_more = { version = "2.1.1", features = ["eq", "debug"] }
miette = { version = "7.6.0", features = ["fancy"] }
phf = { version = "0.14.0", features = ["macros"] }
thiserror = "2.0.18"

[dev-dependencies]
insta = "1.48.0"
rstest = "0.26.1"
